--- a/apps/frontend/Pages/Merchant/Pages/ManageProduct.razor
+++ b/apps/frontend/Pages/Merchant/Pages/ManageProduct.razor
@@ -1,6 +1,7 @@
 @page "/merchant/products/{ProductId:guid}"
 @layout MerchantLayout
 @namespace frontend.Pages.Shared.Components.Merchant
+@using System.Text.Json
 @using frontend.Models
 @using frontend.Pages.Merchant
 @inject ToastService ToastService
@@ -62,7 +63,7 @@
 
 @code {
   [Parameter] public Guid ProductId { get; set; }
-  private ProductX? product;
+  private ProductMapper.ProductDto? product;
   private UpdateProductDetailsRequest updateModel = new();
   private bool isLoading = true;
   private bool isSubmitting = false;
@@ -85,6 +86,10 @@
     }
 
     product = result.Data;
+    Console.WriteLine(JsonSerializer.Serialize(product, new JsonSerializerOptions
+    {
+      WriteIndented = true
+    }));
 
     updateModel = new UpdateProductDetailsRequest
     {
