--- a/apps/frontend/Pages/Customer/Pages/MyOrders.razor
+++ b/apps/frontend/Pages/Customer/Pages/MyOrders.razor
@@ -298,11 +298,11 @@ else
                 if (result.Success && result.Data != null)
                 {
                     orders = result.Data;
-                    ToastService.ShowToast("Order updated successfully", ToastService.ToastLevel.Success);
+                    ToastService.ShowToast("Order updated successfully", string.Empty, ToastService.ToastLevel.Success);
                 }
                 else
                 {
-                    ToastService.ShowToast("Failed to update order.", ToastService.ToastLevel.Error);
+                    ToastService.ShowToast("Failed to update order.", string.Empty, ToastService.ToastLevel.Error);
                 }
             }
             else
@@ -312,7 +312,7 @@ else
         }
         else
         {
-            ToastService.ShowToast("No changes were made", ToastService.ToastLevel.Warning);
+            ToastService.ShowToast("No changes were made", string.Empty, ToastService.ToastLevel.Warning);
         }
 
         CloseModal();
@@ -332,7 +332,7 @@ else
                     if (result.Success && result.Data != null)
                     {
                         orders = result.Data;
-                        ToastService.ShowToast("Order deleted successfully", ToastService.ToastLevel.Success);
+                        ToastService.ShowToast("Order deleted successfully", string.Empty, ToastService.ToastLevel.Success);
                     }
                 }
                 else
@@ -342,7 +342,7 @@ else
             }
             else
             {
-                ToastService.ShowToast("Failed to delete order", ToastService.ToastLevel.Error);
+                ToastService.ShowToast("Failed to delete order", string.Empty, ToastService.ToastLevel.Error);
             }
         }
 
